...
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Creado por Mario Miguel Blanco</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="menu_logos_list">Logotipos</string>
    <string name="menu_sewing_machines">Máquinas de coser</string>
    <string name="menu_arduino_config">Configuración de Arduino</string>
    <string name="img_logo">Imagen del Logo</string>
    <string name="logo_name">Nombre del Logo</string>
    <string name="btn_free_drawing_description">Free drawing button selector</string>
    <string name="btn_circle_drawing_description">Circle drawing button selector</string>
    <string name="btn_square_drawing_description">Square drawing button selector</string>
    <string name="btn_line_drawing_description">Line drawing button selector</string>
    <string name="btn_erase_option_description">Erase option button description</string>
    <string name="btn_text_option_description">Text option button description</string>
    <string name="available_devices_header">Dispositivos disponibles</string>
    <string name="connected_devices_header">Dispositivos emparejados</string>
    <string name="fab_find_devices">Buscar dispositivos</string>
    <string name="search_button_description">Botón de búsqueda</string>
    <string name="txt_devices_list_header">Dispositivos encontrados</string>
    <string name="menu_arduino_connection">Configuración del robot</string>
    <string name="img_machine">Imagen de la máquina de coser</string>
    <string name="machine_name">Nombre de la máquina</string>
    <string name="menu_sewing_machine_details">Detalles de la máquina de coser</string>
    <string name="txtSewingMachineName">Nombre</string>
    <string name="imgSewingMachineDetails">Imagen de la máquina de coser</string>
    <string name="btnSewingmachinesActionDefault">Agregar</string>
    <string name="menu_summary">Resumen de la ejecucion</string>
    <string name="action_delete">Eliminar</string>
    <string name="txt_sewing_machine_summary">Añadir máquina de coser</string>
    <string name="btn_start_summary">Comenzar</string>
    <string name="desc_img_arduino_summary">Estado de la conexión del arduino</string>
    <string name="desc_logo_summary">Logotipo seleccionado</string>
    <string name="btn_start_translate">Traducir</string>
    <string name="menu_create_logo">Crear logotipo</string>
...
    <string name="btn_stop_execution">Stop</string>
    <string name="btn_resume_execution">Reanudar</string>
    <string name="btn_up_arrow_description">Move up</string>
    <string name="btn_down_arrow_description">Move down</string>
    <string name="btn_left_arrow_description">Move left</string>
    <string name="btn_right_arrow_description">Move right</string>
    <string name="btn_axis_done">¡Hecho!</string>
    <string name="btn_disconnect">Desconectar</string>
    <string name="btn_auto_home">Auto Home</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_sew">Coser</string>
    <string name="txt_device_name_unknown">Dispositivo desconocido</string>
    <string name="txt_device_extras_bonded">Emparejado, no conectado</string>
    <string name="btn_sewing_machine_text">Modificar</string>
    <string name="action_add">Añadir</string>
    <string name="hint_etxt_Sewing_machine_name">Nombre de la máquina de coser</string>
    <string name="btn_done_modify">Modificar</string>
</resources>
