...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.sewingMachines.SewingMachinesListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMachinesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.core.widget.NestedScrollView>
